--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "rollup": "^4.12.0",
     "typescript": "^5.3.3"
   }
