--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.11.20",
     "rollup": "^4.12.0",
     "typescript": "^5.3.3"
   }
