chore: gitignore 추가, build 명령어 추가

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "yarn clean && yarn && rollup -c",
+    "build:css" : "node ./scripts/createCssModule.js",
     "clean": "git clean -fdX"
   },
   "author": "",
