--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "main": "index.js",
   "scripts": {
     "build": "yarn clean && yarn && rollup -c",
-    "build:css" : "node ./scripts/createCssModule.js",
-    "clean": "git clean -fdX"
+    "build:css": "node ./scripts/createCssModule.js",
+    "clean": "git clean -fdX",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.11.20",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "rollup": "^4.12.0",
     "typescript": "^5.3.3"
   }
