--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start" : "yarn install && yarn build && yarn build:css",
     "build": "yarn clean && yarn && rollup -c",
     "build:css": "node ./scripts/createCssModule.js",
     "clean": "git clean -fdX",
