--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "strict": true,
     "moduleResolution": "node"
   },
-  "include": ["./src"]
+  "include": ["./src"],
+  "exclude": ["node_modules"]
 }
